# flasher

./: .clang-format  .gitignore  COPYING  LICENSE  README.md  com.github.berkuteagle.flasher.dev.json  com.github.berkuteagle.flasher.json  meson.build
build-aux/flatpak/: com.github.berkuteagle.flasher.json
data/: com.github.berkuteagle.flasher.appdata.xml.in  com.github.berkuteagle.flasher.desktop.in  com.github.berkuteagle.flasher.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: flasher-application-activatable.c  flasher-application-activatable.h  flasher-application.c  flasher-application.h  flasher-window.c  flasher-window.h  flasher-window.ui  flasher.c  flasher.gresource.xml  main.c  meson.build
src/lib/: meson.build
src/lib/flasher/: flasher-device-extension.c  flasher-device-extension.h  flasher-device.c  flasher-device.h  flasher-extension.c  flasher-extension.h  flasher-file-extension.c  flasher-file-extension.h  flasher-file.c  flasher-file.h  flasher-memory-map.c  flasher-memory-map.h  flasher-object.c  flasher-object.h  flasher-plugins-engine.c  flasher-plugins-engine.h  flasher-target.c  flasher-target.h  meson.build
src/plugins/: flasher-plugins-engine.c  flasher-plugins-engine.h  meson.build
src/plugins/ihex/: flasher-ihex.c  flasher-ihex.h  ihex-1.0.plugin.in  ihex.c  ihex.plugin.in  meson.build
src/plugins/stlink/: meson.build  stlink.c  stlink.h  stlink.plugin.in
